# hyhound

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  conanfile.py  pyproject.toml  settings_user.yml
.github/workflows/: linux.yml  wheel.yml
.github/workflows/setup-conan/: action.yml
benchmarks/: CMakeLists.txt  hyh.cpp  ocp-test.cpp  ocp.cpp  plot-ocp.py
benchmarks/ocp/: riccati.hpp  schur.hpp
benchmarks/ocp/riccati/: factor.cpp  solve.cpp  update.cpp
benchmarks/ocp/schur/: factor.cpp  solve.cpp  update.cpp
profiles/: clang18  desktop  gcc-static.profile  gcc14  gcc15  laptop  laptop-clang18
profiles/arch/linux/: cortex-a76.profile  cortex-a9.profile  generic.profile  native.profile  x86-64-v4.profile
profiles/arch/windows/: avx2.profile  avx512.profile
profiles/link/: mold.profile  static-gfortran.profile  static.profile
profiles/sanitizers/: asan.profile  tsan.profile  ubsan.profile
profiles/toolchain/: _cross-linux.profile  _windows.profile  aarch64-rpi3-linux-gnu.profile  amd64-windows.profile  armv7-neon-linux-gnueabihf.profile  clang-linux.profile  icx-linux.profile  x86_64-bionic-linux-gnu.profile
profiles/tools/: ninja.profile
python/: CMakeLists.txt  README.md  dispatch.py.cpp  hyhound.py.cpp
python/hyhound/: __init__.py  _hyhound.py
python/test/: test_update_cholesky.py
scripts/ci/: build-linux-cross.sh  build-linux-native.sh
scripts/ci/conan-profiles/: settings_user.yml
scripts/ci/conan-profiles/profiles/arch/linux/: cortex-a53.profile  cortex-a72.profile  x86-64-v3.profile
scripts/ci/conan-profiles/profiles/arch/macos/: apple-m1.profile
scripts/ci/conan-profiles/profiles/arch/windows/: cortex-a53.profile
scripts/ci/conan-profiles/profiles/link/: static-gfortran.profile
scripts/ci/conan-profiles/profiles/sanitizers/: asan.profile  leak.profile  ubsan.profile
scripts/ci/conan-profiles/profiles/system-deps/: mkl.profile
scripts/ci/conan-profiles/profiles/toolchain/: _macos.profile  armv6-rpi-linux-gnueabihf.profile  icx-linux.profile  x86_64-centos7-linux-gnu.profile
scripts/ci/profiles/: avx2.profile  avx512.profile  generic.profile
scripts/docs/: Doxyfile
scripts/docs/source/: conf.py  cpp.rst  index.rst  python.rst
scripts/docs/source/_static/: style.css
src/: CMakeLists.txt  config.hpp.in
src/cmake/: BLAS.cmake  BuildTime.cmake  Config.cmake.in  CoreConfig.cmake.in  Install.cmake  LinalgConfig.cmake.in
src/hyhound/include/hyhound/: householder-apply-serial.tpp  householder-updowndate-micro-kernels.tpp  householder-updowndate-serial.tpp  householder-updowndate.hpp  updown.hpp
src/hyhound/include/hyhound/micro-kernels/: common.hpp  householder-updowndate-diag.tpp  householder-updowndate-full.tpp  householder-updowndate-tail.tpp  householder-updowndate.hpp  matrix-accessor.hpp
src/hyhound/src/: householder-updowndate-serial.cpp.in
src/hyhound/src/micro-kernels/: Codegen.cmake  householder-updowndate-diag.cpp.in  householder-updowndate-full.cpp.in  householder-updowndate-tail.cpp.in
src/linalg/include/hyhound/linalg/: blas-interface.hpp  blas.hpp  lapack.hpp
src/linalg/src/: blas-interface.cpp
src/ocp/include/hyhound/ocp/: riccati.hpp
src/ocp/src/riccati/: update.cpp
src/util/include/hyhound/: assume.hpp  loop.hpp  matrix-view.hpp  openmp.h  preprocessor.h  stringify.h  unroll.h
test/: CMakeLists.txt  test-downdate.cpp  test-ocp.cpp  test-updowndate.cpp
test_package/: CMakeLists.txt
test_package/src/: example.cpp
